@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007-2011 - TortoiseSVN
+// Copyright (C) 2007-2012 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -254,7 +254,13 @@ STDMETHODIMP SVNDataObject::GetData(FORMATETC* pformatetcIn, STGMEDIUM* pmedium)
                 if (m_bFilesAsUrlLinks)
                     temp += L".url";
             }
-            _tcscpy_s(files->fgd[index].cFileName, (LPCTSTR)temp);
+            if (temp.GetLength() < MAX_PATH)
+                _tcscpy_s(files->fgd[index].cFileName, (LPCTSTR)temp);
+            else
+            {
+                files->cItems--;
+                continue;
+            }
             files->fgd[index].dwFlags = FD_ATTRIBUTES | FD_PROGRESSUI | FD_FILESIZE | FD_LINKUI;
             if (it->rootpath.IsUrl())
             {
